--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <body>
         <h1>あなたはロボットですか？</h1>
         <div class="g-recaptcha" data-sitekey="6LdriqUcAAAAAHeecrWuOIkhDKZUh37VnQA7VDil"></div>
+        <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+    async defer>
+</script>
     </body>
 </html>
