--- a/index.html
+++ b/index.html
@@ -13,5 +13,45 @@ var myAlert = function(response) {
     <div class="g-recaptcha" data-sitekey="6LdriqUcAAAAAHeecrWuOIkhDKZUh37VnQA7VDil" data-callback="myAlert"></div>
   </form>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script><!-- API の読み込み -->
+ 
 </body>
 </html>
